--- a/.env.development
+++ b/.env.development
@@ -34,8 +34,8 @@ DVC_ACCESS_KEY_ID=admin
 DVC_SECRET_ACCESS_KEY=admin123
 DVC_ENDPOINT_URL=http://minio:9000
 
-# Binance API
-BINANCE_SYMBOLS=BTCUSDT,ETHUSDT,BNBUSDT,ADAUSDT,SOLUSDT,XRPUSDT,DOTUSDT,AVAXUSDT,MATICUSDT,LINKUSDT
+# Binance API (use JSON array format for lists)
+BINANCE_SYMBOLS=["BTCUSDT","ETHUSDT","BNBUSDT","ADAUSDT","SOLUSDT","XRPUSDT","DOTUSDT","AVAXUSDT","MATICUSDT","LINKUSDT"]
 
 # API Server - Development mode
 API_HOST=0.0.0.0
