--- a/.env.example
+++ b/.env.example
@@ -64,7 +64,8 @@ DVC_ENDPOINT_URL=http://minio:9000
 # Binance API Configuration
 # ------------------------------------------------------------------------------
 BINANCE_BASE_URL=https://api.binance.com/api/v3/klines
-BINANCE_SYMBOLS=BTCUSDT,ETHUSDT,BNBUSDT,ADAUSDT,SOLUSDT,XRPUSDT,DOTUSDT,AVAXUSDT,MATICUSDT,LINKUSDT
+# Note: Use JSON array format for list values
+BINANCE_SYMBOLS=["BTCUSDT","ETHUSDT","BNBUSDT","ADAUSDT","SOLUSDT","XRPUSDT","DOTUSDT","AVAXUSDT","MATICUSDT","LINKUSDT"]
 BINANCE_INTERVAL=15m
 
 # ------------------------------------------------------------------------------
@@ -75,7 +76,8 @@ API_PORT=8000
 API_WORKERS=4
 API_RELOAD=true
 API_LOG_LEVEL=info
-API_CORS_ORIGINS=*
+# Note: Use JSON array format for list values
+API_CORS_ORIGINS=["*"]
 API_RATE_LIMIT=100/minute
 
 # ------------------------------------------------------------------------------
